--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,7 +7,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px;
-    background-color: #fff6cc;
     font-size: 18px;
 }
 
@@ -32,17 +31,26 @@
     display: flex;
 }
 
+.tag {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+}
+
+.tag img {
+    width: 250px;
+}
 
 .Head {
     display: flex;
-    height: 450px;
+    height: 100%;
+    height: 480px;
     width: 100%;
     background-image: url('/public/imgs/adidas.jpg');
     background-size: cover;
     justify-content: center;
     text-align: center;
 }
-
 
 .HeadContent p{
     font-size: 60px;
@@ -69,33 +77,4 @@
     box-shadow: rgba(0, 0, 0, 0.4) -7px 7px, rgba(63, 63, 63, 0.3) -12px 12px;
     background-color: #fff6cc;
     color: black;
-}
-
-.categoris {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px;
-}
-
-.category {
-    box-shadow: -0px -120px 5px rgba(0, 0, 0, 0.589) inset;
-}
-
-.shop_btn {
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  padding: 13px 20px 13px;
-  outline: 0;
-  border: 1px solid black;
-  color: #000000;
-  background-color: #fff6cc;
-  transition: 0.2s;
-}
-
-.shop_btn:hover {
-    background-color: black;
-    color: #fff6cc;
-    transition: 0.2s;
 }
