add clothes to home page and create the footer

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,8 +6,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 20px;
-    font-size: 18px;
+    padding: 15px;
+    font-size: 17px;
+    width: 98%;
+    position: fixed;
+    background-color: #fffcf0;
+    z-index: 2;
+    margin-top: -50px;
+    border-bottom: solid 1px rgba(151, 151, 151, 0.651);
 }
 
 
@@ -42,6 +48,7 @@
 }
 
 .Head {
+    margin-top: 50px;
     display: flex;
     height: 100%;
     height: 480px;
