--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -54,3 +54,20 @@
 button.slick-prev:before, button.slick-next:before {
     color: black !important;
 }
+
+.clothes {
+    margin: 100px 40px 50px 40px;
+}
+
+.clothe {
+    margin-left: 10px;
+    text-decoration: none;
+    color: black;
+}
+
+.banner {
+    background-image: url('/public/imgs/banner.webp');
+    background-size: cover;
+    width: 100%;
+    height: 150px;
+}
